Add bayesian optimization Kaggle notebook

--- a/CNN_not_pretrained/bayesian-optimization/CNN_not_pretrained_bayesian_80.ipynb
+++ b/CNN_not_pretrained/bayesian-optimization/CNN_not_pretrained_bayesian_80.ipynb
@@ -10788,7 +10788,9 @@
       "source": [
         "#### Model\n",
         "\n",
-        "This set of optimal hyperparameters was obtained using the BayesianOptimization tuner in keras tuner."
+        "This set of optimal hyperparameters was obtained using the BayesianOptimization tuner in keras tuner.\n",
+        "\n",
+        "The hyperparameter search was originally conducted using a [Kaggle notebook](Kaggle_CNN_not_pretrained_bayesian_80.ipynb), yet the search failed after 27 search trials due to insufficient memory. The set of hyperparameter used here was based on the \"Best Value So Far\" in the search."
       ]
     },
     {
