--- a/not_pretrained_vit/transformer_code.ipynb
+++ b/not_pretrained_vit/transformer_code.ipynb
@@ -402,6 +402,7 @@
     "    # Update learning rate scheduler\n",
     "    scheduler.step()\n",
     "    \n",
+    "    # Saving all checkpoints\n",
     "    checkpoint = {\n",
     "        'epoch': epoch + 1,\n",
     "        'model_state_dict': model.state_dict(),\n",
@@ -419,6 +420,40 @@
     "\n",
     "# Print training completed\n",
     "print('Training completed!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a74f58c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## call the best checkpoint:\n",
+    "\n",
+    "def load_checkpoint(checkpoint_path, model, optimizer, scheduler):\n",
+    "    checkpoint = torch.load(checkpoint_path)\n",
+    "    model_state_dict = checkpoint['model_state_dict']\n",
+    "\n",
+    "    # Adjust state dictionary keys if needed\n",
+    "    new_state_dict = {}\n",
+    "    for k, v in model_state_dict.items():\n",
+    "        if k.startswith('module.'):\n",
+    "            new_state_dict[k[7:]] = v  # Remove `module.` prefix\n",
+    "        else:\n",
+    "            new_state_dict[k] = v\n",
+    "\n",
+    "    model.load_state_dict(new_state_dict)\n",
+    "    optimizer.load_state_dict(checkpoint['optimizer_state_dict'])\n",
+    "    scheduler.load_state_dict(checkpoint['scheduler_state_dict'])\n",
+    "    start_epoch = checkpoint['epoch']\n",
+    "    return model, optimizer, scheduler, start_epoch\n",
+    "\n",
+    "checkpoint_path = 'best_checkpoint.pt'\n",
+    "\n",
+    "start_epoch = 0\n",
+    "if checkpoint_path is not None:\n",
+    "    model, optimizer, scheduler, start_epoch = load_checkpoint(checkpoint_path, model, optimizer, scheduler)"
    ]
   }
  ],
